--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,8 @@ docutils==0.14
 gunicorn==19.9.0
 jmespath==0.9.4
 Pillow==6.0.0
-psycopg2==2.8.2
 python-dateutil==2.8.0
+python-dotenv==0.20.0
 pytz==2019.1
 s3transfer==0.2.0
 six==1.12.0
